--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-	  "build": "npx tsc",
-	  "start": "node dist/app.js",
-	  "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/app.js\""
+		"build": "npx tsc",
+		"start": "node dist/app.js",
+		"dev": "concurrently \"npx tsc --watch\" \"nodemon dist/app.js\""
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"concurrently": "^8.2.2",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
