chore: updated mongo database name

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 PORT=5000
-SECRET_TOKEN=
+SECRET_TOKEN="FINAL_PROJ[e]CT"
+
+#SUPER ADMIN 
+ADMIN_FIRSTNAME=SUPER
+ADMIN_LASTNAME=ADMIN
+ADMIN_USERNAME=adminMedify
+ADMIN_PASS=admin@Medify1
+ADMIN_EMAIL=admin@medify.com
