--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5000
+URI='mongodb+srv://admin:admin@cluster0.kip1euw.mongodb.net/?retryWrites=true&w=majority'
 SECRET_TOKEN="FINAL_PROJ[e]CT"
 
 #SUPER ADMIN 
