--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.3.0",
 		"mongoose": "^8.0.2",
+		"node-cache": "^5.1.2",
 		"validator": "^13.11.0"
 	},
 	"devDependencies": {
@@ -31,6 +32,7 @@
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.10.3",
+		"@types/validator": "^13.11.7",
 		"nodemon": "^3.0.2",
 		"typescript": "^5.3.2"
 	}
