--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "week-10-sherinolivia",
+	"name": "medify",
 	"version": "1.0.0",
-	"description": "",
+	"description": "Application where patients can keep track of their medical histories, book a doctor appointment, and consult online.",
 	"main": "dist/app.js",
 	"scripts": {
 		"build": "npx tsc",
 		"start": "node dist/app.js",
 		"dev": "concurrently \"npx tsc --watch\" \"nodemon dist/app.js\""
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": ["mongoose","typescript","jsonwebtoken","bcrypt","cookie"],
+	"author": "Hananjaya, Hill-Man-1, SherinOlivia",
 	"license": "ISC",
 	"dependencies": {
 		"@types/cookie-parser": "^1.4.6",
