--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "medify",
+	"name": "week-10-sherinolivia",
 	"version": "1.0.0",
-	"description": "Application where patients can keep track of their medical histories, book a doctor appointment, and consult online.",
+	"description": "",
 	"main": "dist/app.js",
 	"scripts": {
 		"build": "npx tsc",
 		"start": "node dist/app.js",
 		"dev": "concurrently \"npx tsc --watch\" \"nodemon dist/app.js\""
 	},
-	"keywords": ["mongoose","typescript","jsonwebtoken","bcrypt","cookie"],
-	"author": "Hananjaya, Hill-Man-1, SherinOlivia",
+	"keywords": [],
+	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@types/cookie-parser": "^1.4.6",
@@ -22,7 +22,6 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.3.0",
 		"mongoose": "^8.0.2",
-		"node-cache": "^5.1.2",
 		"validator": "^13.11.0"
 	},
 	"devDependencies": {
@@ -32,7 +31,6 @@
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.10.3",
-		"@types/validator": "^13.11.7",
 		"nodemon": "^3.0.2",
 		"typescript": "^5.3.2"
 	}
