--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
 		"start": "node dist/app.js",
 		"dev": "concurrently \"npx tsc --watch\" \"nodemon dist/app.js\""
 	},
-	"keywords": ["mongoose","typescript","jsonwebtoken","bcrypt","cookie"],
+	"keywords": [
+		"mongoose",
+		"typescript",
+		"jsonwebtoken",
+		"bcrypt",
+		"cookie"
+	],
 	"author": "Hananjaya, Hill-Man-1, SherinOlivia",
 	"license": "ISC",
 	"dependencies": {
@@ -23,6 +29,7 @@
 		"mongodb": "^6.3.0",
 		"mongoose": "^8.0.2",
 		"node-cache": "^5.1.2",
+		"nodemailer": "^6.9.7",
 		"validator": "^13.11.0"
 	},
 	"devDependencies": {
@@ -32,6 +39,7 @@
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.10.3",
+		"@types/nodemailer": "^6.4.14",
 		"@types/validator": "^13.11.7",
 		"nodemon": "^3.0.2",
 		"typescript": "^5.3.2"
