chore: added email and password for nodemailer

--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ ADMIN_USERNAME=adminMedify
 ADMIN_PASS=admin@Medify1
 ADMIN_EMAIL=admin@medify.com
 
+#Nodemailer
+NODEMAILER_MAIL='medifyspprt@gmail.com'
+NODEMAILER_PASS='me@!fy5p02t'
+
