--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ ADMIN_EMAIL=admin@medify.com
 
 #Nodemailer
 NODEMAILER_MAIL='medifyspprt@gmail.com'
-NODEMAILER_PASS='me@!fy5p02t'
+NODEMAILER_PASS='teamEbarcelona'
 
