--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ ADMIN_EMAIL=admin@medify.com
 
 #Nodemailer
 NODEMAILER_MAIL='medifyspprt@gmail.com'
-NODEMAILER_PASS='teamEbarcelona'
-
+NODEMAILER_PASS='w oua gt u u l xwj lrbd'
+LINK=http://127.0.0.1:5000
