--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ ADMIN_EMAIL=admin@medify.com
 #Nodemailer
 NODEMAILER_MAIL='medifyspprt@gmail.com'
 NODEMAILER_PASS='w oua gt u u l xwj lrbd'
-LINK=http://127.0.0.1:5000
+LINK=https://medify-uzic.onrender.com
