--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
 		"date-fns": "^2.30.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.3.0",
 		"mongoose": "^8.0.2",
+		"morgan": "^1.10.0",
 		"node-cache": "^5.1.2",
 		"nodemailer": "^6.9.7",
+		"uuid": "^9.0.1",
 		"validator": "^13.11.0"
 	},
 	"devDependencies": {
@@ -39,8 +42,10 @@
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
+		"@types/morgan": "^1.9.9",
 		"@types/node": "^20.10.3",
 		"@types/nodemailer": "^6.4.14",
+		"@types/uuid": "^9.0.7",
 		"@types/validator": "^13.11.7",
 		"nodemon": "^3.0.2",
 		"typescript": "^5.3.2"
