--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,10 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "serve": "^14.2.1",
     "vite": "^5.0.8"
-  }
+  },
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
