--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
 		"morgan": "^1.10.0",
 		"node-cache": "^5.1.2",
 		"nodemailer": "^6.9.7",
+		"socket.io": "^4.7.2",
 		"uuid": "^9.0.1",
 		"validator": "^13.11.0"
 	},
